extra/tools/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: iotjs-express
  name: iotjs-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iotjs-express
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: iotjs-express
    spec:
      containers:
      - image: rzrfreefr/iotjs-express:latest
        name: iotjs-express
        resources: {}
status: {}
