extra/tools/kube/iotjs-express.yml
#YAML
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iotjs-express
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: iotjs-express
    spec:
      containers:
      - image: rzrfreefr/iotjs-express:latest
        name: iotjs-express
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: iotjs-express
spec:
  ports:
  - nodePort: 30080
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    run: iotjs-express
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
---
