extra/tools/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iotjs-express
spec:
  ports:
  - nodePort: 30080
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    run: iotjs-express
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
